--- a/css/index.css
+++ b/css/index.css
@@ -231,4 +231,61 @@ body{font-family: "微软雅黑"; font-size: 12px;}
 	font-size: 12px;
 	color: #555;
 }
-
+/* banner */
+.banner{
+	position: relative;
+	width:100%;
+	height: 340px;
+	overflow: hidden;
+}
+.banner .imgwrap{
+	
+	-position: relative;
+	height: 100%
+}
+.banner .imgwrap img{
+	width:1280px;
+	float: left;
+	height: 100%;
+	-position: absolute;
+	-top: 0;
+	-left: 0;
+	-display: none;
+}
+.banner .imgwrap img:nth-child(1){
+	display: block;
+}
+.banner .arrow {
+width: 30px;
+height: 30px;
+line-height: 30px;
+color: #fff;
+background: #c33;
+text-align: center;
+position: absolute;
+top: 50%;
+margin-top: -15px;
+}
+.banner .arrowleft{
+	left: 0;
+}
+.banner .arrowright{
+	right: 0;
+}
+.circles{
+	position: absolute;
+	bottom: 10px;
+	width: 100%;
+	height: 20px;
+	text-align: center;
+}
+.ciritem{
+	display: inline-block;
+	width: 12px;
+	height: 12px;
+	border-radius: 50%;
+	background: #fff;
+}
+.ciritem.active{
+	background: #c33;
+}
