--- a/css/index.css
+++ b/css/index.css
@@ -394,6 +394,7 @@ margin-top: -15px;
 /* index-cont */
 #index-cont{
 	width: 100%;
+	padding-bottom: 30px;
 	background: #f2f2f2;
 }
 .index-box1{
