--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,7 @@ ul,ol,li{list-style:none;}
 
 a{text-decoration:none;color:#000;}
 
-h1,h2,h3,h4,h5,h6{font-size:12px;font-weight:100;}
+/* h1,h2,h3,h4,h5,h6{font-size:12px;font-weight:100;} */
 
 .clearfix:after{content:".";display:block;clear:both;height:0;overflow:hidden;visibility:hidden;}
 
@@ -651,6 +651,8 @@ margin-top: -15px;
 	cursor: pointer;
 	color: #fff;
 	background: #ddd;
+	font-size: 24px;
+	line-height: 46px;
 }
 .ban3_right{
 	position: absolute;
@@ -661,6 +663,8 @@ margin-top: -15px;
 	cursor: pointer;
 	color: #fff;
 	background: #ddd;
+	font-size: 24px;
+	line-height: 46px;
 }
 /* banner2   end */
 .ban2right{
@@ -762,6 +766,30 @@ margin-top: -15px;
 }
 .ban2right4 p{
 	margin-top: 3px;
+}
+@font-face {font-family: 'iconfont';
+    src: url('iconfont.eot'); /* IE9*/
+    src: url('iconfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('iconfont.woff') format('woff'), /* chrome、firefox */
+    url('iconfont.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+    url('iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */
+}
+.iconfont{
+    font-family:"iconfont" !important;
+    font-size:16px;font-style:normal;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke-width: 0.2px;
+    -moz-osx-font-smoothing: grayscale;
+}
+.ban2right4 a span{
+	display: block;
+	color: #f00;
+}
+/* .ban2right4 a:hover{
+	text-decoration: inherit;
+} */
+.ban2right4 a:hover span{
+	margin-top: -3px;
 }
 .index-box2{
 	height: 640px;
