--- a/css/xqy-cart.css
+++ b/css/xqy-cart.css
@@ -54,16 +54,21 @@ body {
 
 .goods-style .g-s-item {
 	float: left;
-	width: 36px;
-	height: 36px;
+	width: 38px;
+	height: 38px;
+	border: 1px solid #ccc;
 	margin-right: 20px;
 }
 .goods-style .g-s-item.selected {
-	border: 1px solid #333;
+	border: 1px solid #ff504a;
+}
+.goods-style .g-s-item.selected2 {
+	border: 1px solid #ff504a;
 }
 .goods-style .g-s-item img {
 	width: 36px;
 	height: 36px;
+	padding: 1px;
 }
 .amount-option {
 	float: left;
@@ -105,9 +110,15 @@ body {
 	margin: 0 6px;
 	border: 1px solid #ccc;
 }
-.goods-size:hover{
+.cmli{
 	border: 1px solid #ff504a;
 }
+.cmli2{
+	border: 1px solid #ff504a;
+}
+/* .goods-size:hover{
+	
+} */
 .goods-amount .goods-stock {
 	float: left;
 	margin-left: 10px;
@@ -208,6 +219,7 @@ body {
 	border-bottom: 1px solid #ccc;
 	padding: 0 27px 0 15px;
 	cursor: pointer;
+	position: relative;
 }
 .map_btm{
 	line-height: 26px;
@@ -227,14 +239,17 @@ body {
 	line-height: 33px;
 	border-bottom: 0;
 }
-.mapn{
-
-}
 .xqy_cc{
 	position: relative;
 	padding: 6px 15px;
 	cursor: pointer;
 	z-index: 10;
+	float: left;
+	width: 100px;
+}
+.modalbtn img{
+	float: left;
+	margin-right: 3px;
 }
 .xqy_modal{
 	position: fixed;
@@ -261,22 +276,64 @@ body {
     right: 0;
     width: 720px;
     height:257px;
+    padding: 30px;
     margin: auto;
     background-color: #fff;
 }
 .modalclose{
 	position: absolute;
-    right: -10px;
-    top: -10px;
+    right: 10px;
+    top: 10px;
     width: 20px;
     height: 20px;
-    color: #fff;
+    color: #BBB;
+    font-size: 20px;
+    font-weight: bold;
     line-height: 20px;
     text-align: center;
-    border-radius: 50%;
-    background-color: skyBlue;
     cursor: pointer;
 }
 .modalimg{
 	background: #fff;
+}
+.flyimg{
+	width: 20px;
+	height: 20px;
+}
+.bjcat{
+	background: url(../img/bodr.png);
+	background-repeat: no-repeat;
+	background-position: bottom right;
+	-display: none;
+}
+.csan{
+	position: relative;
+}
+.bjsan{
+	position: absolute;
+	bottom: -2px;
+	right: -2px;
+	width: 14px !important;
+	height: 14px !important;
+	display: none;
+	background: url(../img/bodr.png);
+	background-repeat: no-repeat;
+}
+.maptitbj{
+	position: absolute;
+	right: 10px;
+	top: 9px;
+}
+.mptbj{
+	background: url(../img/maps1.png);
+	background-repeat: no-repeat;
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	width: 10px;
+	height: 10px;
+}
+.map_nav:hover .mptbj{
+	background: url(../img/maps2.png);
+	background-repeat: no-repeat;
 }
